2008-05-22  Sverker Nilsson  <sverker@sverker-laptop>

	* README (License): Added modify and redistribute wording to
	the License for clarity, still refers to MIT license.

	* Removed ihelp pkg. Changes to various files to reflect
	ihelp->doc .
	
	* Moved ihelp.__init__.py into guppy/doc
	
	* Moved top-level doc dir into guppy package
	
	*  ihelp.__init__.py : continued improving text html rendering

2008-05-21  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Spec.py: 

	* guppy/gsl/Filer.py: 

	* guppy/gsl/DottedTree.py: 

	* guppy (docstring): Changed quotes to """ from ''' because I
	found pydoc.gui() (in Python 2.5) didn't recognize it otherwise.

	* guppy/etc/Glue.py (Share.getattr2): Made it try getattr3 with
	the CLAMP first even if it was a package.

2008-05-20  Sverker Nilsson  <sverker@sverker-laptop>

	*  (Default): Made ihelp directory and made guppy.help work first
	version. 

	* guppy/etc/PrettyPrintHTML.py: Added

	* guppy/gsl/Html.py (Node2Html): visit_comment: Made it not
	output anything to the XHTML file.

2008-05-14  Sverker Nilsson  <sverker@sverker-laptop>

	*  (specs/index.gsl): Added external resources documentation
	section and two external links.

2008-04-09  Sverker Nilsson  <sverker@sverker-laptop>

	*  (changelog): Renamed to ChangeLog since Emacs insists on having
	it as default name.

	* MANIFEST: added specs/genguppydoc.py

	* specs/index.gsl: Made it use css, improved table layout for doc
	and download.
	Added doc/css/guppy.css
	
	
	Version 0.1.8


2008-04-08  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/gsl/Main.py (find_aspects_inseq): as->as_
	  Several other GSL-related files as -> as_
	  untabified setup.py to look better in pypi
	

	Version 0.1.7

2008-04-07  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_View.py (FirstCasetest_cal_hiding): as->as_

X	* guppy/heapy/test/test_UniSet.py (FirstCase): as->asrt

	* guppy/sets/test.py (test_set_operations and others): as->as_
